    the app lists are only ever (re)created if something changes
    and so avoiding nasty UI flashes (code is simpler now as well)
  * softwarecenter/models/appstore.py:
    - fix search ranking for exact package name matches (thanks to
      seb128)
    - display exact pkgname matches even if they are a technical
      item (e.g. nautilus)
  
  [ Matthew McGowan ]
  * merged lp:~mmcg069/software-center/bubbles, this gives us
    pretty bubbles in the viewswitcher

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/view/catview_gtk.py:
    - thread listview refreshes to restore UI feedback with
      recent experimental-fastlist improvements 
  * test/test_search_per_spec.py:
    - tweak test for threaded listview refreshes
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py:
    - cleanup imports for wait_for_apt_cache_ready

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Dec 2010 09:38:17 +0100

software-center (3.1.6) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/utils.py,
    softwarecenter/view/appdetailsview_gtk.py:
    - disable find-it-in-the-menu under Unity (LP: #639701)
  
  [ Michael Vogt ]
  * merged lp:~mvo/software-center/no-search-results-help that 
    brings search suggestions for spelling corrections
  * add compat mode so that the current code can still be run on 
    maverick for now

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Dec 2010 16:51:07 +0100

software-center (3.1.5) natty; urgency=low

  * softwarecenter/app.py:
    - on a invalid locale, reset the locale to "C" to avoid
      later crashes in the apthistory that uses strptime 
      (lp: #630248)
  * softwarecenter/view/appview.py:
    - fix crash with the latest python-xapian (LP: #687399)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Dec 2010 18:05:05 +0100

software-center (3.1.4) natty; urgency=low

  [ Michael Vogt ]
  * softwarecenter/db/database.py: