@@ -1040,7 +1040,16 @@ class AppViewFilter(xapian.MatchDecider):
         return not self.__eq__(other)
     def __call__(self, doc):
         """return True if the package should be displayed"""
-        pkgname =  doc.get_value(XAPIAN_VALUE_PKGNAME)  or doc.get_value(self.db._axi_values["pkgname"])
+        # get pkgname from document
+        pkgname =  doc.get_value(XAPIAN_VALUE_PKGNAME)
+        if not pkgname:
+            # the doc says that get_value() is quicker than get_data()
+            # so we use that if we have a updated DB, otherwise
+            # fallback to the old way (the xapian DB may not yet be rebuild)
+            if "pkgname" in self.db._axi_values:
+                pkgname = doc.get_value(self.db._axi_values["pkgname"])
+            else:
+                pkgname = doc.get_data()
         #logging.debug(
         #    "filter: supported_only: %s installed_only: %s '%s'" % (
         #        self.supported_only, self.installed_only, pkgname))
