@@ -9,6 +9,10 @@ software-center (3.1.7) UNRELEASED; urgency=low
       seb128)
     - display exact pkgname matches even if they are a technical
       item (e.g. nautilus)
+  * softwarecenter/view/appview.py:
+    - fallback to previous (slower) method to obtain the pkgname
+      from xapian if the DB is not yet rebuild (thanks to seb128
+      for reporting this problem)
   
   [ Matthew McGowan ]
   * merged lp:~mmcg069/software-center/bubbles, this gives us
